Release v1.2.0 - bStats, refactoring, and modernization
New Features:
- Added bStats integration for anonymous usage statistics (plugin ID: 26656)
- Added config value caching for improved performance
- Added comprehensive config validation with warnings for invalid settings

Breaking Changes:
- Changed placeholder format from {key} to %key% for consistency with other Bukkit plugins
- Simplified default config messages to use standard text instead of Unicode fancy text

Refactoring:
- Refactored package structure from net.vanillymc to dev.oakheart
- Modernized codebase with Java 21 features (pattern matching, enhanced switch, stream improvements)
- Added @NotNull annotations for better null safety
- Improved code quality and removed unused imports

Build:
- Updated Shadow plugin to 9.0.0-beta4 for Java 21 compatibility
- Updated Gradle wrapper to 8.11.1
- Added .claude/ to .gitignore

Documentation:
- Updated API examples with correct package imports
- Improved JavaDoc coverage across all classes
- Updated placeholder documentation with all available placeholders

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>